--- a/source/css/style.css
+++ b/source/css/style.css
@@ -8,7 +8,7 @@ html,
 body {
   overflow-x: hidden;
   font-family: "Josefin Sans", "Lato", sans-serif;
-  background: rgba(51, 51, 51, 0.226);
+  background: #f2f2f2;
   width: 100vw;
   height: 100vh;
 }
@@ -24,10 +24,10 @@ h1 {
 
 .container {
   margin: 50px auto;
-  border: 2px solid white;
+  border: 1px solid white;
   border-radius: 10px;
   width: 60%;
-  background: whitesmoke;
+  box-shadow: -1px 3px 15px -1px #000000;
   position: relative;
 }
 .container .slider img {
@@ -60,6 +60,10 @@ h1 {
 }
 .container .btn-nav img {
   cursor: pointer;
+}
+.container .btn-nav img:hover {
+  transition: 0.3s;
+  transform: scale(1.1);
 }
 .container .left img {
   position: absolute;
